// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders ShowMessage correctly 1`] = `<div />`;

exports[`renders ShowMessage correctly for error 1`] = `
<div>
  <p
    className="error"
  >
     
    Service is unavailable. Please try after sometime.
     
  </p>
</div>
`;

exports[`renders ShowMessage correctly for success 1`] = `
<div>
  <p
    className="success"
  >
     
    Request completed successfully.
     
  </p>
</div>
`;
